--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleFirstPoint.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleFirstPoint.storyboard
@@ -141,7 +141,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="G6e-Hs-IbY">
-                                <rect key="frame" x="155.5" y="533" width="64" height="8"/>
+                                <rect key="frame" x="141.5" y="533" width="92" height="8"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorSelected" translatesAutoresizingMaskIntoConstraints="NO" id="Abt-A2-0dr">
                                         <rect key="frame" x="0.0" y="0.0" width="8" height="8"/>
@@ -165,6 +165,13 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="8" id="Qbf-ce-sQd"/>
                                             <constraint firstAttribute="width" constant="8" id="dOv-Pc-yZc"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="gTK-Dn-krX">
+                                        <rect key="frame" x="84" y="0.0" width="8" height="8"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="8" id="2Ou-Nc-69S"/>
+                                            <constraint firstAttribute="height" constant="8" id="sfQ-P2-nND"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
