--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleSecondPoint.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleSecondPoint.storyboard
@@ -123,7 +123,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="E5e-sq-rtK">
-                                <rect key="frame" x="155.5" y="533" width="64" height="8"/>
+                                <rect key="frame" x="141.5" y="533" width="92" height="8"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="KTC-WF-6fS">
                                         <rect key="frame" x="0.0" y="0.0" width="8" height="8"/>
@@ -141,8 +141,15 @@
                                             <constraint firstAttribute="width" constant="8" id="nuZ-N6-bXS"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="U27-lZ-gZN">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="R2e-qT-Edc">
                                         <rect key="frame" x="56" y="0.0" width="8" height="8"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="8" id="cYo-5y-PwC"/>
+                                            <constraint firstAttribute="height" constant="8" id="tNG-WW-xwJ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="U27-lZ-gZN">
+                                        <rect key="frame" x="84" y="0.0" width="8" height="8"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="8" id="2GW-cC-yBC"/>
