--- a/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
@@ -258,7 +258,7 @@
                                                     <constraint firstAttribute="width" secondItem="z6e-8r-H3T" secondAttribute="height" multiplier="75:62" id="xlM-ka-w1U"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AoQ-Z5-bbg">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AoQ-Z5-bbg">
                                                 <rect key="frame" x="0.0" y="649" width="375" height="219"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pPY-qY-g6B">
@@ -467,6 +467,7 @@
                                             <constraint firstItem="AoQ-Z5-bbg" firstAttribute="leading" secondItem="ZRI-9t-fA3" secondAttribute="leading" id="InW-YY-Ysb"/>
                                             <constraint firstAttribute="trailing" secondItem="Oui-FV-PBb" secondAttribute="trailing" id="Khn-6b-muc"/>
                                             <constraint firstItem="LNl-RB-adI" firstAttribute="leading" secondItem="ZRI-9t-fA3" secondAttribute="leading" id="QX6-6D-jts"/>
+                                            <constraint firstItem="AoQ-Z5-bbg" firstAttribute="top" secondItem="z6e-8r-H3T" secondAttribute="bottom" constant="1" id="Rwz-1S-mtO"/>
                                             <constraint firstAttribute="trailing" secondItem="AoQ-Z5-bbg" secondAttribute="trailing" id="W4g-o9-bXp"/>
                                             <constraint firstItem="LNl-RB-adI" firstAttribute="top" secondItem="ZRI-9t-fA3" secondAttribute="top" constant="76" id="ZTV-lA-4Wd"/>
                                             <constraint firstAttribute="trailing" secondItem="z6e-8r-H3T" secondAttribute="trailing" id="bGx-ld-OxS"/>
